# discord-voice-recognizer

./: Cargo.toml
src/: main.rs  recognize.rs
